# LegacyGram

./: .gitignore  CONTRIBUTING.md  README.md  build.py  pyproject.toml
LegacyGram/: header.py  main.py  settings.py
LegacyGram/data/: constants.py
LegacyGram/features/: action_bar.py  boost_badge.py  gift_button.py  greeting_button.py  media_layout.py  premium_badge.py  profile_actions.py  profile_appearance.py  profile_gifts.py  remove_gift_button.py  remove_gifts_tab.py  settings_menu.py  settings_menu_cleanup.py  star_rating.py  star_reaction.py
LegacyGram/i18n/: i18n.py  locales.py
LegacyGram/ui/: settings.py
LegacyGram/utils/: extera_utils.py  java_utils.py  settings_utils.py  version_utils.py  xposed_utils.py
typings/android/view/: __init__.pyi
typings/java/: __init__.pyi
typings/java/lang/: __init__.pyi
