[project]
name = "LegacyGram"
version = "0.0.9" # We are not using that
description = "A highly customizable plugin to remove paid and bloated features from Telegram"
requires-python = "==3.11.*"
authors = [
    { name = "repinek" }
]
dependencies = [
    "exteragram-utils>=0.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
