[project]
name = "LegacyGram"
version = "1.0.0" # We are not using that
description = "A highly customizable plugin to remove paid and bloated features from Telegram"
requires-python = "==3.11.*"
authors = [
    { name = "repinek" }
]
dependencies = [
    "exteragram-utils>=0.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/
# E, W - pycodestyle
# F - Pyflakes
# I - Isort
# B - flake8-bugbear
# C4 - flake8-comprehensions
# UP - pyupgrade
# RUF - Ruff-specific rules
# TID - flake8-tidy-imports
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "TID"]
ignore = ["RUF001"]

[tool.ruff.lint.flake8-tidy-imports]
# Builder just can't
# But It's not exlclude imports which starts without dot, like features.action_bar
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["LegacyGram"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"